# QImageSharp

./: .gitignore  QImageSharp.sln
QImageSharp/: Color.cs  Line.cs  NativeLib.cs  Point.cs  QImageSharp.csproj  Rect.cs  Size.cs
QImageSharp.Native/: CMakeLists.txt  QImageSharp.Native.nuspec.in  QImageSharp.Native.targets.in  nuget-pack.cmake
QImageSharp.Native/include/: Color.h  global.h
QImageSharp.Native/src/: Color.cpp  Point.cpp
QImageSharp/cpp/: CMakeLists.txt
QImageSharp/cpp/include/: Point.h  Size.h  global.h
QImageSharp/cpp/src/: Color.cpp  Size.cpp
QImageSharpTest/: ColorTest.cs  LineTest.cs  PointTest.cs  QImageSharpTest.csproj  RectTest.cs  SetUp.cs  SizeTest.cs
